--- a/templates/solicitud/index.html.twig
+++ b/templates/solicitud/index.html.twig
@@ -5,7 +5,10 @@
 {% block body %}
     <h1>Solicitudes</h1>
     <a class="btn btn-primary btn-sm" href="{{ path('solicitud_new') }}">Crear nueva solicitud</a>
-
+    {% if is_granted('ROLE_MUNICIPIO') %}
+    <a class="btn btn-primary btn-sm" href="{{path('estadosolicitud_index')}}">Nuevo estado de solicitud</a>
+    {% endif %}
+    
     <table class="table">
         <thead>
             <tr>
