--- a/templates/emprendimiento/_form.html.twig
+++ b/templates/emprendimiento/_form.html.twig
@@ -1,11 +1,14 @@
 {{ form_start(form) }}
+    <div class="row">
     <div class="col-lg-4 col-md-8 col-sm-12">
     {{ form_widget(form) }}
+    </div>
     </div>
     <center>
     <div class="col-lg-12 col-md-8 col-sm-12">
     <div id="mapid"></div>
     </div>
     </center>
-    <button class="btn">{{ button_label|default('Crear') }}</button>
+    
+    <button class="btn btn-secondary btn-sm">{{ button_label|default('Crear') }}</button>
 {{ form_end(form) }}
