--- a/templates/emprendimiento/index.html.twig
+++ b/templates/emprendimiento/index.html.twig
@@ -101,8 +101,10 @@
             }
 
             function cards(emprendimientos) {
-                var card
+                var card=``
                 emprendimientos.forEach(emprendimiento => {
+                    console.log(emprendimiento);
+                    
                     fotos=emprendimiento.fotos
                     var url_card_foto='https://uomsanmartin.org.ar/site/wp-content/uploads/2016/01/1-600x400.jpg'
                     if (Array.isArray(fotos)&&fotos.length) {
@@ -114,17 +116,20 @@
                     var customPopup="<br/><a href='emprendimiento/"+emprendimiento.id+"'>Ver</a>";
                     L.marker([emprendimiento.latitud,emprendimiento.longitud]).addTo(marcadores)
                         .bindPopup(title +direccion+ emprendimiento.descripcion + customPopup)
-                    
+                    descripcion=emprendimiento.descripcion
+                    if (descripcion.length>30) {
+                        descripcion+=`...`
+                    }
                     card+=`<div class='col-lg-3 col-md-6 col-sm-1'>
                             <div class='card' style='width: 18rem;'>
                                 <img class='card-img-top' src='${url_card_foto}' alt='${emprendimiento.razon_social}' height="130">
                                 <div class='card-body'>
                                     <h5 class='card-title'>${emprendimiento.razon_social}</h5>
-                                    <p class='card-text'>${emprendimiento.descripcion}</p>
+                                    <p class='card-text'>${descripcion}</p>
                                     <a href='/emprendimiento/${emprendimiento.id}' class='btn btn-primary'>Ver</a>
                                 </div>
                             </div>            
-                        </div>` 
+                        </div><br/><br/>` 
                     // $('div#emprendimientos_cards').append(card);
                 });
                 return card;
