--- a/templates/solicitud/_form.html.twig
+++ b/templates/solicitud/_form.html.twig
@@ -1,6 +1,8 @@
 {{ form_start(form) }}
-    <div class="col-lg-4 col-md-8 col-sm-12">
+    <div class="row">
+    <div class="col col-lg-4 col-md-6 col-sm-12">
     {{ form_widget(form) }}
+    </div>
     </div>
     <center>
     <div class="col-lg-12 col-md-8 col-sm-12">
